--- a/src/app/pokemon/list-pokemon/list-pokemon.component.html
+++ b/src/app/pokemon/list-pokemon/list-pokemon.component.html
@@ -6,6 +6,7 @@ type="number"
 > -->
 <div class="container">
     <div class="row">
+        <app-search-pokemon></app-search-pokemon>
         <div *ngFor="let pokemon of pokemonList" (click)="goToPokemon(pokemon)" class="col m4 s6">
             <div class="card horizontal" appBorderCard="red">
                 <div class="card-image">
@@ -24,7 +25,14 @@ type="number"
             
         </div>
     </div>
+    <h3 *ngIf="!pokemonList" class="center">
+        <app-loader></app-loader>
+      </h3>
 
 </div>
+<a class="btn-floating btn-large waves-effect waves-light z-depth-3"
+    style="position:fixed;bottom:25px;right: 25px;"
+    routerLink="/pokemon/add"
+>+</a>
 <!-- <p *ngIf="pokemonSelected">Vous avez sélectionné : {{pokemonSelected.name}}</p>
 <p *ngIf="!pokemonSelected">Aucun pokémon n'a été trouvé.</p> -->
